Fix date wrap

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -58,7 +58,6 @@ header {
 
   text-wrap: balance;
   padding: 1em;
-
   h2 {
     max-width: 40em;
   }
@@ -197,6 +196,16 @@ p {
     background-color: var(--accent);
     font-size: 1.5em;
   
+  }
+
+  header {
+    h1 {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
   }
 }
 
